# NeuroDB

./: .gitignore  pyproject.toml  testNeuroDB.py  testSqlite.py  testTransfer.py
dashboard/: app.py  dashboard.py  globalState.py  home.py
neurodb/: __init__.py
neurodb/script/: __init__.py  transfer.py
neurodb/src/: __init__.py  datajointDBIO.py  imageReader.py  neurodb.py  sqliteDBIO.py
